All models tuned

--- a/UNSW-DataThon-2018.ipynb
+++ b/UNSW-DataThon-2018.ipynb
@@ -460,26 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.linear_model import ElasticNet\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "import xgboost as xgb\n",
-    "\n",
-    "# import lightgbm as lgb\n",
-    "from sklearn.kernel_ridge import KernelRidge\n",
-    "\n"
+    "from xgboost import XGBRegressor\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -489,76 +483,26 @@
     "def CV_RMSE(model):\n",
     "    kf = KFold(n_folds, shuffle=True)\n",
     "    scores = np.sqrt(-cross_val_score(model, X, y, cv=kf.get_n_splits(X), scoring='neg_mean_squared_error'))\n",
-    "    print(\"RMSE Score:\", scores)\n",
-    "    return scores\n"
+    "    print(scores)\n",
+    "    print(\"Mean: \")\n",
+    "    print(scores.mean())\n",
+    "    print(\"Standard Deviation: \")\n",
+    "    print(scores.std())\n",
+    "#     return scores\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE Score: [ 1.65410044  1.68172519  1.65939165  1.68420128  1.62352286  1.66060431\n",
-      "  1.67072673  1.71888523  1.70147595  1.68715353]\n",
-      "1.67417871814 0.0254038369031\n",
-      "RMSE Score: [ 1.65410044  1.68172519  1.65939165  1.68420128  1.62352286  1.66060431\n",
-      "  1.67072673  1.71888523  1.70147595  1.68715353]\n",
-      "1.67417871814 0.0254038369031\n",
-      "RMSE Score: [ 1.65410044  1.68172519  1.65939165  1.68420128  1.62352286  1.66060431\n",
-      "  1.67072673  1.71888523  1.70147595  1.68715353]\n",
-      "1.67417871814 0.0254038369031\n"
-     ]
-    }
-   ],
-   "source": [
-    "for c in [1, 2, 3, 4, 5]:\n",
-    "    scores = CV_RMSE(SVR(degree = c))\n",
-    "    print(scores.mean(), scores.std())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE Score: [ 1.60129741  1.63104755  1.57574771  1.6367075   1.58524533  1.6236834\n",
-      "  1.63482202  1.65051586  1.653381    1.64618522]\n",
-      "1.62386330049 0.0259466992685\n"
-     ]
-    }
-   ],
-   "source": [
-    "elasticnet = ElasticNet(alpha=0.003)\n",
-    "\n",
-    "scores = CV_RMSE(elasticnet)\n",
-    "print(scores.mean(), scores.std())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -580,48 +524,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE Score: [ 1.65410044  1.68172519  1.65939165  1.68420128  1.62352286  1.66060431\n",
+      "  1.67072673  1.71888523  1.70147595  1.68715353]\n",
+      "1.67417871814 0.0254038369031\n"
+     ]
+    }
+   ],
    "source": [
-    "ridge = Ridge(alpha=0.0001)\n",
-    "lasso = Lasso(alpha=0.0001)\n",
-    "elasticnet = ElasticNet(alpha=0.0001)\n",
-    "CV_RMSE(ridge)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CV_RMSE(lasso)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alpha_ranges = [0.0001, 0.0002, 0.0003, 0.0004, 0.0005]\n",
+    "svr = SVR()\n",
     "\n",
-    "alpha_scores = []\n",
-    "for alpha in alpha_ranges:\n",
-    "    model = ElasticNet(alpha=alpha)\n",
+    "scores = CV_RMSE(SVR())\n",
+    "print(scores.mean(), scores.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE Score: [ 1.60249777  1.63301277  1.57764625  1.63692596  1.58526251  1.62175701\n",
+      "  1.63468013  1.64969968  1.65170222  1.64760477]\n",
+      "1.62407890623 0.0254244474108\n"
+     ]
+    }
+   ],
+   "source": [
+    "ramdomforest = RandomForestRegressor(n_estimators=100, max_depth=5, min_samples_leaf=7, max_features=\"sqrt\")\n",
     "\n",
-    "    scores = CV_RMSE(model)\n",
-    "    print(alpha, scores.mean())\n",
-    "    alpha_scores.append(scores.mean())\n",
-    "print(alpha_scores)\n",
-    "\n"
+    "scores = CV_RMSE(ramdomforest)\n",
+    "print(scores.mean(), scores.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE Score: [ 1.60420217  1.63264358  1.5745859   1.63873419  1.58754405  1.62193697\n",
+      "  1.63688704  1.65646649  1.6530388   1.64952707]\n",
+      "1.6255566268 0.026738752788\n"
+     ]
+    }
+   ],
+   "source": [
+    "gbr = GradientBoostingRegressor(learning_rate=0.01)\n",
+    "\n",
+    "scores = CV_RMSE(gbr)\n",
+    "print(scores.mean(), scores.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE Score: [ 1.60455668  1.63326943  1.5745859   1.63878476  1.58758016  1.62193697\n",
+      "  1.63688704  1.65651508  1.65361455  1.64948551]\n",
+      "1.62572160957 0.026786504121\n"
+     ]
+    }
+   ],
+   "source": [
+    "gbr = GradientBoostingRegressor()\n",
+    "\n",
+    "scores = CV_RMSE(gbr)\n",
+    "print(scores.mean(), scores.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = {\n",
+    "    \"elasticnet\": elasticnet,\n",
+    "    \"svr\": svr,\n",
+    "    \"ramdomforest\": ramdomforest,\n",
+    "    \"gbr\": gbr\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "regressor elasticnet has RMSE score:\n",
+      "[ 1.60129741  1.63104755  1.57574771  1.6367075   1.58524533  1.6236834\n",
+      "  1.63482202  1.65051586  1.653381    1.64618522]\n",
+      "Mean: \n",
+      "1.62386330049\n",
+      "Standard Deviation: \n",
+      "0.0259466992685\n",
+      "\n",
+      "regressor svr has RMSE score:\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, regressor in models.items():\n",
+    "    print(\"regressor \" + name + \" has RMSE score:\")\n",
+    "    CV_RMSE(regressor)\n",
+    "#     print(\"Mean: \" + scores.mean() + \"Standard Deviation: \" + scores.std())\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for n in [100, 300, 500, 700, 900, 1000]:\n",
+    "    scores = CV_RMSE(XGBRegressor(learning_rate=0.1, n_estimators=n))\n",
+    "    print(scores.mean(), scores.std())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -637,6 +688,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -719,7 +771,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 评价这四个模型的好坏\n",
@@ -778,7 +832,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -792,7 +848,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clone(lasso)"
